--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,12 +3,12 @@ body {
 }
 
 .calendar {
-  --day-cell-size: 100px;
+  $dayCellSize: 100px;
   display: flex;
   flex-wrap: wrap;
   margin: auto;
   gap: 1px;
-  width: calc(7 * var(--day-cell-size) + 6px);
+  width: 7 * $dayCellSize + 6px;
   padding: 10px;
 
   $days:
@@ -34,8 +34,8 @@ body {
 
   &__day {
     box-sizing: border-box;
-    width: var(--day-cell-size);
-    height: var(--day-cell-size);
+    width: $dayCellSize;
+    height: $dayCellSize;
     background-color: #eee;
     border: 1px solid black;
     cursor: pointer;
@@ -48,7 +48,7 @@ body {
         font-size: 30px;
         display: block;
         text-align: center;
-        line-height: var(--day-cell-size);
+        line-height: $dayCellSize;
       }
     }
 
