add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
+@import "../../src/styles/variables.scss";
+@import "../../src/styles/modifiers.scss";
+@import "../../src/styles/calendar.scss";
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
