add task solution2

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -4,6 +4,10 @@
   width: calc(7 * #{$cell-size} + 10px);
   gap: #{$border-width};
   margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .calendar__day {
