--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,9 +2,9 @@
 @import "../../src/styles/modifiers.scss";
 @import "../../src/styles/calendar.scss";
 
-* {
-  box-sizing: border-box;
-}
+// * {
+//   box-sizing: border-box;
+// }
 
 body {
   margin: 0;
