--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 $size-block: 100px;
 $size-calendar: ($size-block * 7) + 10px;
+$block-color: #eee;
+$active-block-color: pink;
 $start-days:
   mon 0,
   tue $size-block + 1px,
@@ -8,7 +10,6 @@ $start-days:
   fri 4*$size-block + 4px,
   sat 5*$size-block + 5px,
   sun 6*$size-block + 6px;
-$month-length: 29;
 
 body {
   margin: 0;
@@ -27,7 +28,7 @@ body {
   &__day {
     height: $size-block;
     width: $size-block;
-    background-color: #eee;
+    background-color: $block-color;
     border: 1px solid black;
     box-sizing: border-box;
     position: relative;
@@ -35,7 +36,7 @@ body {
     transition-duration: 0.5s;
 
     &:hover {
-      background-color: pink;
+      background-color: $active-block-color;
       transform: translateY(-20px);
     }
 
@@ -47,17 +48,17 @@ body {
         left: 35%;
       }
     }
-
-    @for $last-day from $month-length to 31 {
-      &:nth-child(#{$last-day + 1}) {
-        display: none;
-      }
-    }
   }
 }
 
 @each $start-day, $shift in $start-days {
   .calendar--start-day--#{$start-day} :first-child {
     margin-left: $shift;
+  }
+}
+
+@for $last-day from 28 to 31 {
+  .calendar--month-length--#{$last-day} :nth-child(n + #{$last-day + 1}) {
+    display: none;
   }
 }
