--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,9 +12,12 @@ $start-days:
   sun 6*$size-block + 6px;
 
 body {
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: Arial, sans-serif;
   font-size: 30px;
+  height: 100vh;
 }
 
 .calendar {
@@ -44,8 +47,9 @@ body {
       &:nth-child(#{$number-day})::before {
         content: "#{$number-day}";
         position: absolute;
-        top: 35%;
-        left: 35%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
     }
   }
