--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,68 +1,2 @@
-$size-block: 100px;
-$size-calendar: ($size-block * 7) + 10px;
-$block-color: #eee;
-$active-block-color: pink;
-$start-days:
-  mon 0,
-  tue $size-block + 1px,
-  wed 2*$size-block + 2px
-  thu 3*$size-block + 3px,
-  fri 4*$size-block + 4px,
-  sat 5*$size-block + 5px,
-  sun 6*$size-block + 6px;
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
-  height: 100vh;
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1px;
-
-  width: $size-calendar;
-  margin: auto;
-
-  &__day {
-    height: $size-block;
-    width: $size-block;
-    background-color: $block-color;
-    border: 1px solid black;
-    box-sizing: border-box;
-    position: relative;
-    cursor: pointer;
-    transition-duration: 0.5s;
-
-    &:hover {
-      background-color: $active-block-color;
-      transform: translateY(-20px);
-    }
-
-    @for $number-day from 1 through 31 {
-      &:nth-child(#{$number-day})::before {
-        content: "#{$number-day}";
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-    }
-  }
-}
-
-@each $start-day, $shift in $start-days {
-  .calendar--start-day--#{$start-day} :first-child {
-    margin-left: $shift;
-  }
-}
-
-@for $last-day from 28 to 31 {
-  .calendar--month-length--#{$last-day} :nth-child(n + #{$last-day + 1}) {
-    display: none;
-  }
-}
+@import "blocks/variables";
+@import "blocks/calendar";
