--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "./value.scss";
 
 .calendar {
-  margin: 30px;
+  margin: 30px auto;
   display: flex;
   flex-wrap: wrap;
   width: $calendar-width;
@@ -40,8 +40,9 @@
   }
 
   @each $day, $margins in $days {
+
     &__start-day--#{$day} :first-child {
-      margin-left: $margins;
+      margin-left: $margins * $margin-day;
     }
   }
 }
