--- a/src/styles/value.scss
+++ b/src/styles/value.scss
@@ -5,9 +5,9 @@ $calendar-width: $number-of-cells * $cell-size + ($number-of-cells - 1);
 $margin-day: $cell-size + 1px;
 $days:
   "mon" 0,
-  "tue" 1 * $margin-day,
-  "wed" 2 * $margin-day,
-  "thu" 3 * $margin-day,
-  "fri" 4 * $margin-day,
-  "sat" 5 * $margin-day,
-  "sun" 6 * $margin-day;
+  "tue" 1,
+  "wed" 2,
+  "thu" 3,
+  "fri" 4,
+  "sat" 5,
+  "sun" 6;
