--- a/src/styles/values.scss
+++ b/src/styles/values.scss
@@ -2,14 +2,6 @@ $number-of-day: 31;
 $number-of-cell: 7;
 $column-size: 100px;
 $margin-day: $column-size + 1px;
-$days:
-  mon 0,
-  tue $margin-day,
-  wed 2 * $margin-day,
-  thu 3 * $margin-day,
-  fri 4 * $margin-day,
-  sat 5 * $margin-day,
-  sun 6 * $margin-day;
-
+$days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 $padding-value: $number-of-cell * 1 - 1;
 $widht-calendar: $number-of-cell * $column-size + $padding-value;
