--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,44 @@
+@import "./loops.scss";
+
 body {
   margin: 0;
+
+  .calendar {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 10px;
+    gap: 1px;
+    max-width: 718px;
+
+    &__cell {
+      height: 100px;
+      width: 100px;
+      background-color: #eee;
+      border: 1px solid #000;
+      position: relative;
+      transition-duration: 0.5s;
+
+      &::before {
+        content: "";
+        font-family: Arial, sans-serif;
+        font-size: 30px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      &:hover {
+        background-color: pink;
+        transform: translateY(-20px);
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+@for $i from 1 through 31 {
+  .calendar__cell:nth-child(#{$i})::before {
+    content: "#{$i}";
+  }
 }
