--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,61 +1,67 @@
-$daysOfWeek: (mon, tue, wed, thu, fri, sat, sun);
-
-@each $day in $daysOfWeek {
-  $multiplier: index($daysOfWeek, $day) - 1;
-  .calendar--start--day-#{$day} {
-    .calendar__day:first-child {
-      margin-left: calc(#{$multiplier} * (100% / 7));
-    }
-  }
-}
-
-@for $i from 28 through 31 {
-  .calendar--month--length-#{$i} {
-    .calendar__day:nth-child(n+#{$i+1}):nth-child(n-31) {
-      visibility: hidden;
-    }
-  }
-}
-
 body {
   margin: 0;
+}
 
-  .calendar {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 10px;
-    gap: 1px;
-    max-width: 718px;
+.calendar {
+  $dayCellSize: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  margin-top: 50px;
+  gap: 1px;
+  width: 7 * $dayCellSize + 6px;
+  padding: 10px;
+  border: 10px solid #262626;
+  border-radius: 5%;
+  background-color: #9999ff;
 
-    &__day {
-      height: 100px;
-      width: 100px;
-      background-color: #eee;
-      border: 1px solid #000;
-      position: relative;
-      transition-duration: 0.5s;
+  $days:
+    mon 0,
+    tue 101px,
+    wed 202px,
+    thu 303px,
+    fri 404px,
+    sat 505px,
+    sun 606px;
 
-      &::before {
-        content: "";
-        font-family: Arial, sans-serif;
+  @each $day, $margin in $days {
+    &--start--day-#{$day} div:first-child {
+      margin-left: $margin;
+    }
+  }
+
+  @for $lastDay from 28 through 31 {
+    &--month--length-#{$lastDay} div:nth-child(n + #{$lastDay + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+    width: $dayCellSize;
+    height: $dayCellSize;
+    background-color: #000099;
+    color: white;
+    border: 1px solid #00ccff;
+    cursor: pointer;
+    transition-duration: 0.5s;
+
+    @for $dayNumber from 1 through 31 {
+      &:nth-child(#{$dayNumber})::before {
+        content: "#{$dayNumber}";
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
         font-size: 30px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-
-      &:hover {
-        background-color: pink;
-        transform: translateY(-20px);
-        cursor: pointer;
+        display: block;
+        text-align: center;
+        line-height: $dayCellSize;
       }
     }
 
-    @for $i from 1 through 31 {
-      .calendar__day:nth-child(#{$i})::before {
-        content: "#{$i}";
-      }
+    &:hover {
+      background-color:  #ff0066;
+      transform: translateY(-20px);
+      color: #ffffff;
+      border: 5px solid #cc0066;
     }
   }
 }
