add task solution

--- a/src/styles/loops.scss
+++ b/src/styles/loops.scss
@@ -1,16 +1,23 @@
-$daysOfWeek: (mon, tue, wed, thu, fri, sat, sun);
+@import "./variables.scss";
 
-@each $day in $daysOfWeek {
-  $multiplier: index($daysOfWeek, $day) - 1;
-  .calendar--start-#{$day} {
-    .calendar__cell:first-child {
-      margin-left: calc(#{$multiplier} * (100% / 7));
-    }
+$days-of-week: (
+  "mon" 0,
+  "tue" 1,
+  "wed" 2,
+  "thu" 3,
+  "fri" 4,
+  "sat" 5,
+  "sun" 6,
+);
+
+@each $day, $number in $days-of-week {
+  .calendar--start--#{$day} :first-child {
+    margin-left: $number * ($cell-size + $day-block-gap);
   }
 }
 
 @for $i from 28 through 31 {
-  .calendar--month-length-#{$i} {
+  .calendar--month--length--#{$i} {
     .calendar__cell:nth-child(n+#{$i+1}):nth-child(n-31) {
       visibility: hidden;
     }
