fixed calculation issue and bem convention

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,7 +54,7 @@ body {
   }
 
   @each $day in $start-days {
-    &--start-day-#{$day} &__day {
+    &--start-day--#{$day} &__day {
       &:nth-child(1) {
         margin-left: #{index($start-days, $day) * $margin-left - $margin-left};
       }
@@ -62,7 +62,7 @@ body {
   }
 
   @each $length in $month-lengths {
-    &--month-length-#{$length} &__day:nth-child(n + #{$length + 1}) {
+    &--month-length--#{$length} &__day:nth-child(n + #{$length + 1}) {
       display: none;
     }
   }
