--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,77 @@
+$day_side: 100px;
+$day_gap: 1px;
+$calendar_padding: 10px;
+$start-days: "mon", "tue", "wed", "thu", "fri", "sat", "sun";
+
 body {
   margin: 0;
+}
+
+.calendar {
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: $calendar_padding;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  width: ($day_side * 7) + ($calendar_padding * 2) + ($day_gap * 6);
+
+  $margin-increment: 0;
+
+  @each $day in $start-days {
+    &__start-day--#{$day} > .calendar__day:nth-child(1) {
+      margin-left: $margin-increment;
+      $margin-increment: $margin-increment + $day_side + $day_gap;
+    }
+  }
+
+  $month-lengths: 28, 29, 30, 31;
+
+  @for $i from 28 through 31 {
+    &.calendar__month-length--#{$i} {
+      .calendar__day {
+        &:nth-child(n + #{$i + 1}) {
+          display: none;
+        }
+      }
+    }
+  }
+
+  &__day {
+    position: relative;
+    box-sizing: border-box;
+    width: $day_side;
+    height: $day_side;
+    border: 1px solid black;
+    background-color: #eee;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    transition: all ease-in-out 0.5s;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+
+      width: 100%;
+      height: 100%;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+      cursor: pointer;
+    }
+  }
 }
