--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,29 @@
-$day_side: 100px;
 $day_gap: 1px;
+$day_side: 100px;
 $calendar_padding: 10px;
+$main-bg-color: #eee;
+$hover-bg-color: #ffbfcb;
+$month-lengths: 28, 29, 30, 31;
 $start-days: "mon", "tue", "wed", "thu", "fri", "sat", "sun";
 
 body {
   margin: 0;
 }
 
+.container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .calendar {
   box-sizing: border-box;
-  margin: 0 auto;
-  padding: $calendar_padding;
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
+  gap: $day_gap;
   width: ($day_side * 7) + ($calendar_padding * 2) + ($day_gap * 6);
+  padding: $calendar_padding;
 
   $margin-increment: 0;
 
@@ -24,8 +33,6 @@ body {
       $margin-increment: $margin-increment + $day_side + $day_gap;
     }
   }
-
-  $month-lengths: 28, 29, 30, 31;
 
   @for $i from 28 through 31 {
     &.calendar__month-length--#{$i} {
@@ -38,14 +45,14 @@ body {
   }
 
   &__day {
-    position: relative;
     box-sizing: border-box;
+    position: relative;
     width: $day_side;
     height: $day_side;
-    border: 1px solid black;
-    background-color: #eee;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
+    border: 1px solid black;
+    background-color: $main-bg-color;
     transition: all ease-in-out 0.5s;
 
     &::before {
@@ -63,13 +70,15 @@ body {
       justify-content: center;
       align-items: center;
     }
+
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
       }
     }
+
     &:hover {
-      background-color: #ffbfcb;
+      background-color: $hover-bg-color;
       transform: translateY(-20px);
       cursor: pointer;
     }
