--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,3 +1,13 @@
+body {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      min-height: 100vh;
+      align-items: center;
+    }
+
 .calendar {
   display: flex;
   flex-wrap: wrap;
