--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,7 +34,7 @@ section,
 
     &:hover {
       transform: translateY(-20px);
-      background-color: #FEBFCB;
+      background-color: rgb(254, 191, 203);
     }
 
     @for $dat from 1 through 31 {
@@ -43,7 +43,7 @@ section,
           display: block;
           text-align: center;
           line-height: $main-line-height-day;
-          content:"#{$dat}";
+          content: "#{$dat}";
           font-size: 30px;
           font-family: Arial, Helvetica, sans-serif;
         }
@@ -59,7 +59,8 @@ section,
 }
 
 @for $length from 28 through 31 {
-  .calendar--month-length--#{$length} .calendar__days:nth-child(-n + #{$length}) {
+  .calendar--month-length--#{$length}
+  .calendar__days:nth-child(-n + #{$length}) {
     display: block;
   }
 }
