--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -14,7 +14,7 @@
     background-color: $cell-color;
     border: 1px solid #000;
     box-sizing: border-box;
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
@@ -36,8 +36,8 @@
   }
 
   @for $last-day from 28 through 31 {
-    &--month-length--#{$last-day} :nth-child(-n + #{$last-day}) {
-      display: flex;
+    &--month-length--#{$last-day} :nth-child(n + #{$last-day + 1}) {
+      display: none;
     }
   }
 
