--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,3 +16,13 @@ $start-day: (
   "sat": 5,
   "sun": 6,
 );
+
+$weekend-day: (
+  "mon": 0,
+  "tue": 6,
+  "wed": 5,
+  "thu": 4,
+  "fri": 3,
+  "sat": 2,
+  "sun": 1,
+);
