fixed last commits

--- a/src/styles/blocks/body.scss
+++ b/src/styles/blocks/body.scss
@@ -1,4 +1,8 @@
 .body {
   margin: 0;
-  @include centering-xy();
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  //@include centering-xy();
 }
