--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -22,8 +22,8 @@
     @include square($size-box-day);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    background-color: #eee;
-    border: 1px solid #000;
+    background-color: $base-color;
+    border: 1px solid $border-color;
     box-sizing: border-box;
     text-align: center;
     line-height: $size-box-day;
@@ -37,7 +37,7 @@
 
     &:hover {
       cursor: pointer;
-      background-color: #ffc0cd;
+      background-color: $hover-color;
       transform: translateY(-20px);
     }
   }
