--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,8 @@
 $size-box-day: 100px;
 $size-gap: 1px;
+$base-color: #eee;
+$hover-color: #ffc0cd;
+$border-color: #000;
 $days:
   "mon" 0,
   "tue" 1,
