--- a/src/styles/blocks/body.scss
+++ b/src/styles/blocks/body.scss
@@ -1,8 +1,5 @@
 .body {
   margin: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  //@include centering-xy();
+  width: 100%;
+  @include centering-xy();
 }
