--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,67 @@
+$days: thu 306, fri 408, sat 510, sun 6, mon 0, tue 102, wed 204;
+$days-in-month: 30;
+
 body {
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  width: 730px;
+  margin: 10px;
+  box-sizing: border-box;
+}
+
+.calendar__day {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  background-color: #eee;
+  border: 1px solid #000;
+  transition: 0.5s;
+
+  &:hover {
+    cursor: pointer;
+    background-color: pink;
+    transform: translateY(-20px);
+  }
+}
+
+@for $day from 1 through 31 {
+  .calendar__day[data-day="#{$day}"]::before {
+    content: "#{$day}";
+  }
+}
+
+@each $day, $margin in $days {
+  .start-day {
+    &:first-child {
+      margin-left: #{$margin}px; // Перший день місяця без відступу
+    }
+    &[data-day='#{$day}'] {
+      // Застосовуємо модифікатор для кожного дня тижня
+      margin-left: 1px;
+    }
+  }
+}
+
+.month-length-28,
+.month-length-29,
+.month-length-30,
+.month-length-31 {
+
+  display: none;
+}
+
+@for $day from 28 through $days-in-month {
+  .month-length-#{$day}[data-day='#{$day}'] {
+    display: flex;
+  }
 }
