--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,65 +1,3 @@
-$day-size: 100px;
-$calendar-width: (($day-size + 2) * 7) + 20px;
+@import "./utils/variables";
 
-$days-in-month: 31;
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.calendar {
-  display: flex;
-  margin: 0 auto;
-  width: $calendar-width;
-  padding: 10px;
-  flex-wrap: wrap;
-  gap: 1px;
-}
-
-.calendar__day {
-  width: $day-size;
-  height: $day-size;
-  border: 1px solid black;
-  background-color: #eee;
-  transition-duration: 0.5s;
-
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.calendar__day:hover {
-  cursor: pointer;
-  background-color: #f08080;
-  transform: translateY(-20px);
-}
-
-@for $i from 1 through $days-in-month {
-  .calendar__day:nth-child(#{$i})::before {
-    content: "#{$i}";
-  }
-}
-
-$month-length: 28, 29, 30, 31;
-
-@for $i from 28 through 31 {
-  .calendar--month-length-#{$i} {
-    .calendar__day:nth-child(n + #{$i + 1}) {
-      display: none;
-    }
-  }
-}
-
-$week-days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
-
-@each $day, $index in $week-days {
-  .calendar--start-#{$day} {
-    .calendar__day:first-child {
-      margin-left: ($day-size + 1) * $index;
-    }
-  }
-}
+@import "./blocks/style";
