--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,51 @@
+@import "./utils/variables";
+
 body {
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px auto;
+  gap: $cell-gap;
+  padding: $padding-value;
+  width: $calendar-width;
+
+  &__day {
+    box-sizing: border-box;
+    border: 1px solid black;
+    text-align: center;
+    line-height: $cell-size;
+    height: $cell-size;
+    width: $cell-size;
+    background-color: $main-bg-color;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
+
+    &:hover {
+      background-color: $hover-bg-color;
+      cursor: pointer;
+      transform: translateY(-20px);
+      transition: 0.5s;
+    }
+  }
+
+  @each $day, $number in $days {
+    &__start-day--#{$day} :first-child {
+      margin-left: $number * ($cell-size + $cell-gap);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &__month-length--#{$i} :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
