--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,10 @@
 @import "./variables.scss";
 
-.container {
+.body {
   display: flex;
   justify-content: center;
+  height: 100vh;
+  align-items: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
@@ -17,6 +19,7 @@
   padding-inline: $padding;
 
   &__day {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
