add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,15 +8,15 @@ $gap: 1px;
 $animation-duration: 0.5s;
 $hovered-color: #ff69b4;
 
-$days: (
-  mon: 1,
-  tue: 2,
-  wed: 3,
-  thu: 4,
-  fri: 5,
-  sat: 6,
-  sun: 7
-);
+// $days: (
+//   mon: 1,
+//   tue: 2,
+//   wed: 3,
+//   thu: 4,
+//   fri: 5,
+//   sat: 6,
+//   sun: 7
+// );
 
 body {
   margin: 0;
@@ -55,11 +55,11 @@ body {
   }
 }
 
-@each $name, $number in $days {
-  .#{$name} {
-    number: $number;
-  }
-}
+// @each $name, $number in $days {
+//   .#{$name} {
+//     number: $number;
+//   }
+// }
 
 .calendar {
   display: flex;
