--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,15 @@
-body {
+* {
   margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+@import "callendar";
+@import "controlls";
