--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0;
   height: 100vh;
+  margin: 0;
 }
 
 .calendar {
@@ -30,19 +30,23 @@ body {
   }
 
   display: grid;
+  gap: 4px;
   grid-template-columns: repeat(7, 1fr);
   width: fit-content;
 
   &__day {
-    position: relative;
     width: 98px;
     height: 98px;
-
     &::after {
-      position: absolute;
       top: 0;
       left: 0;
       transition: all 150ms ease-out;
+    }
+
+    &:hover::after {
+      transform: translate(0, -20px);
+      background: pink;
+      cursor: pointer;
     }
 
     @for $i from 1 through $days {
@@ -61,13 +65,6 @@ body {
         height: 100%;
         background-color: #eee;
       }
-    }
-
-    &:hover::after {
-      cursor: pointer;
-      background: pink;
-      top: -5px;
-      left: -5px;
     }
   }
 }
