fix number shows correctle

--- a/src/styles/loops.scss
+++ b/src/styles/loops.scss
@@ -8,7 +8,7 @@
 
 @for $i from 28 through 31 {
   .calendar--month--length-#{$i} {
-    .calendar__day:nth-child(n+#{$i}):nth-child(n-31) {
+    .calendar__day:nth-child(n+#{$i+1}):nth-child(n-31) {
       visibility: hidden;
     }
   }
