--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,77 @@
+$cell-size: 100px;
+$font-size: 30px;
+
+$weekdays: (
+  pn: "Пн",
+  vt: "Вт",
+  sr: "Ср",
+  ct: "Чт",
+  pt: "Пт",
+  sb: "Сб",
+  vs: "Нд"
+);
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: (7 * $cell-size) + 10px;
+  gap: 1px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.calendar__day {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: relative;
+  width: $cell-size;
+  height: $cell-size;
+  border: 1px solid black;
+  background-color: #eee;
+
+  transition-duration: 0.5s;
+}
+
+.calendar__day::before {
+  content: "";
+  font-family: "Arial", sans-serif;
+  font-size: $font-size;
+}
+
+.calendar__day:hover {
+  background-color: pink;
+  cursor: pointer;
+  transform: translateY(-20px);
+}
+
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(#{$i})::before {
+    content: "#{$i}";
+  }
+
+  $padding: ($cell-size - $font-size) / 2;
+  .calendar__day:nth-child(#{$i}) {
+    padding: $padding;
+  }
+}
+
+@each $day, $abbr in $weekdays {
+  .calendar__day--#{$day} {
+    &::before {
+      content: "#{$abbr}";
+    }
+  }
 }
