--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -71,7 +71,7 @@ body {
 
 @each $day, $abbr in $weekdays {
   .calendar__day--start-#{$day} {
-    margin-left: calc(($cell-size + 1px) * index($weekdays, $day));
+    margin-left: calc($cell-size + 1px);
     &::before {
       content: "#{$abbr}";
     }
