--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,69 @@
+$column: 7;
+$padding: 10px;
+$widthDay: 100px;
+$heightDay: 100px;
+$gapPx: 1px;
+$borderPx: 1px;
+
 body {
   margin: 0;
+}
+.calendar {
+  padding: $padding;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: $gapPx;
+  max-width: calc((#{$column} * #{$widthDay}) + ((#{$gapPx} + (#{$padding}) + #{$borderPx}) * 7));
+
+  &__day {
+    background-color: #eee;
+    width: $widthDay;
+    height: $heightDay;
+    border: $borderPx solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: transform;
+    transition-duration: 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+
+  @for $index from 1 through 31 {
+      &:nth-child(#{$index})::before {
+        content: '#{$index}';
+      }
+    }
+  }
+
+  @each $day in mon, tue, wed, thu, fri, sat, sun {
+    &__day--#{$day} {
+      margin-left: calc((index(#{$day}, mon, tue, wed, thu, fri, sat, sun) - 1) * (#{$widthDay} + #{$gapPx}));
+    }
+  }
+
+  &.month-length-28 {
+    &:nth-child(n + 29) {
+      display: none;
+    }
+  }
+
+  &.month-length-29 {
+    &:nth-child(n + 30) {
+      display: none;
+    }
+  }
+
+  &.month-length-30 {
+    &:nth-child(n + 31) {
+      display: none;
+    }
+  }
 }
