--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,4 @@
-@import './utils/variables.scss';
-@import './utils/mixins.scss';
+@import "./utils/variables.scss";
+@import "./utils/mixins.scss";
 
-@import './blocs/calendar.scss';
-
-
+@import "./blocs/calendar.scss";
