--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,5 @@
 $cell-size: 100px;
 $col-count: 7;
-$row-count: 6;
 $gap: 1px;
 $outer-padding: 10px;
 $week-days: (
@@ -20,8 +19,7 @@ body {
 .calendar {
   width: calc(
     (#{$col-count} * #{$cell-size}) +
-    (#{$col-count} - 1) * #{$gap} +
-    (#{$outer-padding} * 2)
+    (#{$col-count} - 1) * #{$gap}
   );
   border: 2px solid rgb(84, 13, 84);
   margin: 0 auto;
@@ -31,7 +29,6 @@ body {
   gap: $gap;
 
   &__day {
-    display: flex;
     width: $cell-size;
     height: $cell-size;
     box-sizing: border-box;
