--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,72 @@
+$dayHeight: 100px;
+$dayWidth: 100px;
+$gapSize: 1px;
+$calendarWidth: 7 * $dayWidth + 6 * $gapSize;
+
 body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  padding-inline: 10px;
+  width: $calendarWidth;
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: $dayHeight;
+    width: $dayWidth;
+    border: 1px solid black;
+    background-color: #eee;
+    transition: all, 0.5s;
+
+    &:hover {
+      background-color: pink;
+      cursor: pointer;
+      transform: translateY(-20px);
+    }
+    // adding days numbers
+    @for $day from 1 through 31 {
+      &--#{$day}::before {
+        content: "#{$day}";
+        font-size: 36px;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    }
+  }
+}
+// adding month-lenght limits
+@for $lastDay from 28 through 31 {
+  .calendar--month-length-#{$lastDay} {
+    .calendar__day:nth-child(n + #{$lastDay + 1}) {
+      display: none;
+    }
+  }
+}
+// adding blank before first day
+$days: (
+  mon: 0,
+  tue: $dayWidth + $gapSize,
+  wed: 2 * $dayWidth + 2 * $gapSize,
+  thu: 3 * $dayWidth + 3 * $gapSize,
+  fri: 4 * $dayWidth + 4 * $gapSize,
+  sat: 5 * $dayWidth + 5 * $gapSize,
+  sun: 6 * $dayWidth + 6 * $gapSize
+);
+
+@each $day, $blank in $days {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: $blank;
+    }
+  }
 }
