--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,4 @@
-$dayHeight: 100px;
-$dayWidth: 100px;
-$gapSize: 1px;
-$calendarWidth: 7 * $dayWidth + 6 * $gapSize;
+@import "utils/variables.scss";
 
 body {
   height: 100vh;
@@ -27,7 +24,9 @@ body {
     width: $dayWidth;
     border: 1px solid black;
     background-color: #eee;
-    transition: all, 0.5s;
+    font-size: 36px;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: background-color, transform 0.5s;
 
     &:hover {
       background-color: pink;
@@ -36,17 +35,15 @@ body {
     }
     // adding days numbers
     @for $day from 1 through 31 {
-      &--#{$day}::before {
+      &:nth-child(#{$day})::before {
         content: "#{$day}";
-        font-size: 36px;
-        font-family: Arial, Helvetica, sans-serif;
       }
     }
   }
 }
 // adding month-lenght limits
 @for $lastDay from 28 through 31 {
-  .calendar--month-length-#{$lastDay} {
+  .calendar--month-length--#{$lastDay} {
     .calendar__day:nth-child(n + #{$lastDay + 1}) {
       display: none;
     }
@@ -64,7 +61,7 @@ $days: (
 );
 
 @each $day, $blank in $days {
-  .calendar--start-day-#{$day} {
+  .calendar--start-day--#{$day} {
     .calendar__day:first-child {
       margin-left: $blank;
     }
