--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -33,16 +33,24 @@
     }
   }
 
-  $days: --mon, --tue, --wed, --thu, --fri, --sat, --sun;
+  $days: (
+    "mon": 0,
+    "tue": 1,
+    "wed": 2,
+    "thu": 3,
+    "fri": 4,
+    "sat": 5,
+    "sun": 6.06
+  );
 
-  @each $day in $days {
-    &--start-day#{$day} .calendar__day:first-child {
-      margin-left: ($daySize + $dayGap) * 6.06;
+    @each $day, $number in $days {
+      &--start-day--#{$day} .calendar__day:first-child {
+        margin-left: ($daySize + $dayGap) * $number;
+      }
     }
-  }
 
   @for $last-days from 28 through 31 {
-    &--month-length#{$last-days} {
+    &--month-length--#{$last-days} {
       .calendar__day:nth-child(n + #{$last-days + 1}) {
         display: none;
       }
